--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Name | Portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+    <!-- Welcome Section -->
+    <section id="welcome">
+        <h1>Welcome to My Portfolio</h1>
+        <p>Contact Info Here</p>
+        <!-- Placeholder for WebGL Content -->
+        <img src="images/placeholder.jpg" alt="WebGL Content" id="webgl-placeholder">
+    </section>
+
+    <!-- Navigation Buttons -->
+    <section id="navigation">
+        <button onclick="window.location.href='pages/cv.html';">CV</button>
+        <button onclick="window.location.href='https://www.linkedin.com';">LinkedIn</button>
+        <button onclick="window.location.href='pages/projects.html';">Projects</button>
+        <button onclick="window.location.href='pages/personal.html';">Personal</button>
+        <button onclick="window.location.href='pages/wip.html';">WIP</button>
+    </section>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
