--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <!-- Welcome Section -->
     <section id="welcome">
-        <h1>Welcome to My Portfolio</h1>
-        <p>Contact Info Here</p>
+        <h1>Daniel Runebjörk</h1>
+        <p><b>titel:</b>Civilingenjör Arkitektur – Civil Engineer M.Sc. Architecture/nl<b>epost:</b>daniel.runebjork@gmail.com<b>adress:</b>Erstagatan 23, 116 36 Stockholm/nl<b>telefon:</b>0706751783/nl </p>
         <!-- Placeholder for WebGL Content -->
         <img src="images/placeholder.jpg" alt="WebGL Content" id="webgl-placeholder">
     </section>
@@ -19,7 +19,7 @@
     <!-- Navigation Buttons -->
     <section id="navigation">
         <button onclick="window.location.href='pages/cv.html';">CV</button>
-        <button onclick="window.location.href='https://www.linkedin.com';">LinkedIn</button>
+        <button onclick="window.location.href='https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/';">LinkedIn</button>
         <button onclick="window.location.href='pages/projects.html';">Projects</button>
         <button onclick="window.location.href='pages/personal.html';">Personal</button>
         <button onclick="window.location.href='pages/wip.html';">WIP</button>
