--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Welcome Section -->
     <section id="welcome">
         <h1>Daniel Runebjörk</h1>
-        <p><b>titel:</b>Civilingenjör Arkitektur – Civil Engineer M.Sc. Architecture/nl<b>epost:</b>daniel.runebjork@gmail.com<b>adress:</b>Erstagatan 23, 116 36 Stockholm/nl<b>telefon:</b>0706751783/nl </p>
+        <p><b>titel:</b>Civilingenjör Arkitektur – Civil Engineer M.Sc. Architecture<br><b>epost:</b>daniel.runebjork@gmail.com<br><b>adress:</b>Erstagatan 23, 116 36 Stockholm<br><b>telefon:</b>0706751783</p>
         <!-- Placeholder for WebGL Content -->
         <img src="images/placeholder.jpg" alt="WebGL Content" id="webgl-placeholder">
     </section>
