--- a/pages/cv.html
+++ b/pages/cv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV | Your Name</title>
+    <title>CV | Daniel Runebjörk</title>
     <link rel="stylesheet" href="../css/style.css">
     <style>
         /* You might want to add some styles to properly size and center the PDF */
@@ -19,7 +19,7 @@
         <embed src="..documents/CV_daniel_runebjork_2023_simple.pdf" id="cv-frame" type="application/pdf">
         <!-- The embed tag for displaying the PDF -->
         <!-- Make sure 'path-to-your-cv.pdf' is the correct path to your PDF file -->
-        <p>If the CV does not display correctly, you can <a href="..documents/CV_daniel_runebjork_2023_simple.pdf" download="DanielRunebjörk_2023_CV.pdf">download the CV here</a>.</p>
+        <!-- <p>If the CV does not display correctly, you can <a href="..documents/CV_daniel_runebjork_2023_simple.pdf" download="DanielRunebjörk_2023_CV.pdf">download the CV here</a>.</p> -->
     </div>
 </body>
 </html>
