--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
         <h1>Daniel Runebjörk</h1>
         <p><b>Titel: </b>Civilingenjör Arkitektur – Civil Engineer M.Sc. Architecture<br><b>Epost: </b>daniel.runebjork@gmail.com<br><b>Adress: </b>Erstagatan 23, 116 36 Stockholm<br><b>Telefon: </b>0706751783</p>
         <!-- Placeholder for WebGL Content -->
-        <img src="images/placeholder.jpg" alt="WebGL Content" id="webgl-placeholder">
+        c <img src="images/placeholder.jpg" alt="WebGL Content" id="webgl-placeholder">-->
     </section>
 
     <!-- Navigation Buttons -->
     <section id="navigation">
         <button onclick="window.location.href='pages/cv.html';">CV</button>
-        <button onclick="window.location.href='https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/';">LinkedIn</button>
+        <!-- <button onclick="window.location.href='https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/';">LinkedIn</button>
         <button onclick="window.location.href='pages/projects.html';">Projects</button>
         <button onclick="window.location.href='pages/personal.html';">Personal</button>
-        <button onclick="window.location.href='pages/wip.html';">WIP</button>
+        <button onclick="window.location.href='pages/wip.html';">WIP</button> -->
     </section>
 
-    <script src="js/script.js"></script>
+    <!-- <script src="js/script.js"></script> -->
 </body>
 </html>
