--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Daniel Runebjörk</h1>
         <p><b>Titel: </b>Civilingenjör Arkitektur – Civil Engineer M.Sc. Architecture<br><b>Epost: </b>daniel.runebjork@gmail.com<br><b>Adress: </b>Erstagatan 23, 116 36 Stockholm<br><b>Telefon: </b>0706751783</p>
         <!-- Placeholder for WebGL Content -->
-        c <img src="images/placeholder.jpg" alt="WebGL Content" id="webgl-placeholder">-->
+        <!-- <img src="images/placeholder.jpg" alt="WebGL Content" id="webgl-placeholder">-->
     </section>
 
     <!-- Navigation Buttons -->
