--- a/pages/cv.html
+++ b/pages/cv.html
@@ -16,10 +16,9 @@
 </head>
 <body>
     <div id="cv-container">
-        <embed src="CV_daniel_runebjork_2023_simple.pdf" id="cv-frame" type="application/pdf">
-        <!-- The embed tag for displaying the PDF -->
-        <!-- Make sure 'path-to-your-cv.pdf' is the correct path to your PDF file -->
-        <!-- <p>If the CV does not display correctly, you can <a href="..documents/CV_daniel_runebjork_2023_simple.pdf" download="DanielRunebjörk_2023_CV.pdf">download the CV here</a>.</p> -->
+        <!-- <embed src="CV_daniel_runebjork_2023_simple.pdf" id="cv-frame" type="application/pdf"> -->
+        <iframe src="path/to/your/CV.pdf" id="cv-frame" style="width:100%; height:100vh;" frameborder="0"></iframe>
+        <p>If the CV does not display correctly, you can <a href="..documents/CV_daniel_runebjork_2023_simple.pdf" download="DanielRunebjörk_2023_CV.pdf">download the CV here</a>.</p>
     </div>
 </body>
 </html>
