--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Portfolio</title>
+    <title>Daniel Runebjörk | Portfölj</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -11,7 +11,14 @@
     <!-- Welcome Section -->
     <section id="welcome">
         <h1>Daniel Runebjörk</h1>
-        <p><b>Titel: </b>Civilingenjör Arkitektur – Civil Engineer M.Sc. Architecture<br><b>Epost: </b>daniel.runebjork@gmail.com<br><b>Adress: </b>Erstagatan 23, 116 36 Stockholm<br><b>Telefon: </b>0706751783</p>
+        <p><b>Titel: </b>Civilingenjör Arkitektur – Civil Engineer M.Sc. Architecture
+            <br><b>Info: </b>Introduktion: Specialiserad inom bygghandlingsprojektering och utveckling 
+            <br>av relaterad metodik. Erfarenhet av bostäder, kontor, skolor, vårdboenden, 
+            <br>specialfastigheter. Kompletterande kunskap inom realtidsvisualisering och 
+            <br>informationshantering relaterat till detta. Gästföreläsare vid Luleå Tekniska 
+            <br>Universitet. Intresserad av matlagning, hantverk och friluftsliv.
+            <br><b>Styrkor: </b>Nyfiken, snabblärd, bred kompetens, innovativ, mån om 
+            <br>kunskapsspridning, lagspelare, anpassningsbar, vänlig och omtänksam</p>
         <!-- Placeholder for WebGL Content -->
         <!-- <img src="images/placeholder.jpg" alt="WebGL Content" id="webgl-placeholder">-->
     </section>
@@ -19,10 +26,10 @@
     <!-- Navigation Buttons -->
     <section id="navigation">
         <button onclick="window.location.href='pages/cv.html';">CV</button>
-        <!-- <button onclick="window.location.href='https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/';">LinkedIn</button>
+        <button onclick="window.location.href='https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/';">LinkedIn</button>
         <button onclick="window.location.href='pages/projects.html';">Projects</button>
         <button onclick="window.location.href='pages/personal.html';">Personal</button>
-        <button onclick="window.location.href='pages/wip.html';">WIP</button> -->
+        <button onclick="window.location.href='https://runebjork.github.io/';">Hem</button>
     </section>
 
     <!-- <script src="js/script.js"></script> -->
