--- a/pages/cv.html
+++ b/pages/cv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV | Daniel Runebjörk</title>
+    <title>Daniel Runebjörk | CV</title>
     <link rel="stylesheet" href="../css/style.css">
     <style>
         /* You might want to add some styles to properly size and center the PDF */
