--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-    <!-- Welcome Section -->
     <section id="welcome">
-        <h1>Daniel Runebjörk</h1>
+        <h1>Daniel Runebjörk | Portfölj</h1>
         <p><b>Titel: </b>Civilingenjör Arkitektur – Civil Engineer M.Sc. Architecture
             <br><b>Info: </b>Introduktion: Specialiserad inom bygghandlingsprojektering och utveckling 
             <br>av relaterad metodik. Erfarenhet av bostäder, kontor, skolor, vårdboenden, 
@@ -27,8 +25,8 @@
     <section id="navigation">
         <button onclick="window.location.href='pages/cv.html';">CV</button>
         <button onclick="window.location.href='https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/';">LinkedIn</button>
-        <button onclick="window.location.href='pages/projects.html';">Projects</button>
-        <button onclick="window.location.href='pages/personal.html';">Personal</button>
+        <button onclick="window.location.href='pages/projects.html';">Projekt</button>
+        <button onclick="window.location.href='pages/personal.html';">Om mig</button>
         <button onclick="window.location.href='https://runebjork.github.io/';">Hem</button>
     </section>
 
