--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="..css/style.css">
 </head>
 <body>
-
-    <!-- Welcome Section -->
+    <section id="welcome">
+        <h1>Daniel Runebjörk | Projekt</h1>
+    </section>
     <section id="p1">
         <h1>Projekt 1</h1>
-        <p><b>Titel: </b>Projekt 1
+        <p><b>Titel: </b>Projekt 1 | Portfölj
             <br><b>Info: </b>Introduktion: Specialiserad inom bygghandlingsprojektering och utveckling 
             <br>av relaterad metodik. Erfarenhet av bostäder, kontor, skolor, vårdboenden, 
             <br>specialfastigheter. Kompletterande kunskap inom realtidsvisualisering och 
@@ -46,8 +47,8 @@
     <section id="navigation">
         <button onclick="window.location.href='pages/cv.html';">CV</button>
         <button onclick="window.location.href='https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/';">LinkedIn</button>
-        <button onclick="window.location.href='pages/projects.html';">Projects</button>
-        <button onclick="window.location.href='pages/personal.html';">Personal</button>
+        <button onclick="window.location.href='pages/projects.html';">Projekt</button>
+        <button onclick="window.location.href='pages/personal.html';">Om mig</button>
         <button onclick="window.location.href='https://runebjork.github.io/';">Hem</button>
     </section>
 
