--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Runebjörk | Projekt</title>
-    <link rel="stylesheet" href="..css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <section id="welcome">
