--- a/pages/cv.html
+++ b/pages/cv.html
@@ -17,8 +17,8 @@
 <body>
     <div id="cv-container">
         <!-- <embed src="CV_daniel_runebjork_2023_simple.pdf" id="cv-frame" type="application/pdf"> -->
-        <iframe src="CV_daniel_runebjork_2023_simple.pdf" id="cv-frame" style="width:100%; height:100vh;" frameborder="0"></iframe>
-        <p>If the CV does not display correctly, you can <a href="..documents/CV_daniel_runebjork_2023_simple.pdf" download="DanielRunebjörk_2023_CV.pdf">download the CV here</a>.</p>
+        <iframe src="../documents/CV_daniel_runebjork_2023_simple.pdf" id="cv-frame" style="width:100%; height:100vh;" frameborder="0"></iframe>
+        <p>If the CV does not display correctly, you can <a href="../documents/CV_daniel_runebjork_2023_simple.pdf" download="DanielRunebjörk_2023_CV.pdf">download the CV here</a>.</p>
     </div>
 </body>
 </html>
