--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <section id="welcome">
+    <section id="project">
         <h1>Daniel Runebjörk | Projekt</h1>
     </section>
-    <section id="p1">
+    <section id="project1">
         <h1>Projekt 1</h1>
         <p><b>Titel: </b>Projekt 1 | Portfölj
             <br><b>Info: </b>Introduktion: Specialiserad inom bygghandlingsprojektering och utveckling 
@@ -21,7 +21,7 @@
             <br><b>Styrkor: </b>Nyfiken, snabblärd, bred kompetens, innovativ, mån om 
             <br>kunskapsspridning, lagspelare, anpassningsbar, vänlig och omtänksam</p>
     </section>
-    <section id="p2">
+    <section id="project2">
         <h1>Projekt 2</h1>
         <p><b>Titel: </b>Projekt 2
             <br><b>Info: </b>Introduktion: Specialiserad inom bygghandlingsprojektering och utveckling 
@@ -32,8 +32,8 @@
             <br><b>Styrkor: </b>Nyfiken, snabblärd, bred kompetens, innovativ, mån om 
             <br>kunskapsspridning, lagspelare, anpassningsbar, vänlig och omtänksam</p>
     </section>
-    <section id="p3">
-        <h1>Projekt 2</h1>
+    <section id="project3">
+        <h1>Projekt 3</h1>
         <p><b>Titel: </b>Projekt 3
             <br><b>Info: </b>Introduktion: Specialiserad inom bygghandlingsprojektering och utveckling 
             <br>av relaterad metodik. Erfarenhet av bostäder, kontor, skolor, vårdboenden, 
