--- a/pages/projects.html
+++ b/pages/projects.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <section id="project">
-        <h1>Daniel Runebjörk | Projekt</h1>
+        <h1><b>Daniel Runebjörk</b> | Projekt</h1>
     </section>
     <section id="project1">
         <h1>Projekt 1</h1>
-        <p><b>Titel: </b>Projekt 1 | Portfölj
+        <p><b>Titel: </b>Projekt 1 | 
             <br><b>Info: </b>Introduktion: Specialiserad inom bygghandlingsprojektering och utveckling 
             <br>av relaterad metodik. Erfarenhet av bostäder, kontor, skolor, vårdboenden, 
             <br>specialfastigheter. Kompletterande kunskap inom realtidsvisualisering och 
