--- a/pages/projects.html
+++ b/pages/projects.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <section id="project">
+    <section id="welcome">
         <h1><b>Daniel Runebjörk</b> | Projekt</h1>
     </section>
-    <section id="project1">
+    <section id="welcome">
         <h1>Projekt 1</h1>
         <p><b>Titel: </b>Projekt 1 | 
             <br><b>Info: </b>Introduktion: Specialiserad inom bygghandlingsprojektering och utveckling 
@@ -21,7 +21,7 @@
             <br><b>Styrkor: </b>Nyfiken, snabblärd, bred kompetens, innovativ, mån om 
             <br>kunskapsspridning, lagspelare, anpassningsbar, vänlig och omtänksam</p>
     </section>
-    <section id="project2">
+    <section id="welcome">
         <h1>Projekt 2</h1>
         <p><b>Titel: </b>Projekt 2
             <br><b>Info: </b>Introduktion: Specialiserad inom bygghandlingsprojektering och utveckling 
@@ -32,7 +32,7 @@
             <br><b>Styrkor: </b>Nyfiken, snabblärd, bred kompetens, innovativ, mån om 
             <br>kunskapsspridning, lagspelare, anpassningsbar, vänlig och omtänksam</p>
     </section>
-    <section id="project3">
+    <section id="welcome">
         <h1>Projekt 3</h1>
         <p><b>Titel: </b>Projekt 3
             <br><b>Info: </b>Introduktion: Specialiserad inom bygghandlingsprojektering och utveckling 
