--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><b>Daniel Runebjörk</b> | Portfölj</title>
+    <title>Daniel Runebjörk | Portfölj</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <section id="welcome">
-        <h1>Daniel Runebjörk | Portfölj</h1>
+        <h1><b>Daniel Runebjörk</b> | Projekt</h1>
         <p><b>Titel: </b>Civilingenjör Arkitektur – Civil Engineer M.Sc. Architecture
             <br><b>Introduktion: </b>Specialiserad inom bygghandlingsprojektering och utveckling av relaterad metodik. Erfarenhet av bostäder, kontor, skolor, vårdboenden, 
             <br>specialfastigheter. Kompletterande kunskap inom realtidsvisualisering och informationshantering relaterat till detta. Gästföreläsare vid Luleå Tekniska 
