--- a/pages/personal.html
+++ b/pages/personal.html
@@ -45,10 +45,10 @@
     </section>
     <!-- Navigation Buttons -->
     <section id="navigation">
-        <button onclick="window.location.href='pages/cv.html';">CV</button>
+        <button onclick="window.location.href='cv.html';">CV</button>
         <button onclick="window.location.href='https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/';">LinkedIn</button>
-        <button onclick="window.location.href='pages/projects.html';">Projekt</button>
-        <button onclick="window.location.href='pages/personal.html';">Om mig</button>
+        <button onclick="window.location.href='projects.html';">Projekt</button>
+        <button onclick="window.location.href='personal.html';">Om mig</button>
         <button onclick="window.location.href='https://runebjork.github.io/';">Hem</button>
     </section>
 
