--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section id="welcome">
-        <h1><b>Daniel Runebjörk</b> | Projekt</h1>
+        <h1><b>Daniel Runebjörk</b> | Portfölj</h1>
         <p><b>Titel: </b>Civilingenjör Arkitektur – Civil Engineer M.Sc. Architecture
             <br><b>Introduktion: </b>Specialiserad inom bygghandlingsprojektering och utveckling av relaterad metodik. Erfarenhet av bostäder, kontor, skolor, vårdboenden, 
             <br>specialfastigheter. Kompletterande kunskap inom realtidsvisualisering och informationshantering relaterat till detta. Gästföreläsare vid Luleå Tekniska 
