--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <section id="welcome">
         <h1><b>Daniel Runebjörk</b> | Portfölj</h1>
         <p><b>Titel: </b>Civilingenjör Arkitektur – Civil Engineer M.Sc. Architecture
-            <br><b>Introduktion: </b>Specialiserad inom bygghandlingsprojektering och utveckling av relaterad metodik. Erfarenhet av bostäder, kontor, skolor, vårdboenden, 
-            <br>specialfastigheter. Kompletterande kunskap inom realtidsvisualisering och informationshantering relaterat till detta. Gästföreläsare vid Luleå Tekniska 
-            <br>Universitet. Intresserad av matlagning, hantverk och friluftsliv.
+            <br><b>Introduktion: </b>Specialiserad inom bygghandlingsprojektering och utveckling av relaterad metodik.
+            <br>Erfarenhet av bostäder, kontor, skolor, vårdboenden, specialfastigheter.
+            <br>Kompletterande kunskap inom realtidsvisualisering och informationshantering relaterat till detta.
+            <br>Gästföreläsare vid Luleå Tekniska Universitet. Intresserad av matlagning, hantverk och friluftsliv.
             <br><b>Styrkor: </b>Nyfiken, snabblärd, bred kompetens, innovativ, mån om kunskapsspridning, lagspelare, anpassningsbar, vänlig och omtänksam</p>
         <!-- Placeholder for WebGL Content -->
         <!-- <img src="images/placeholder.jpg" alt="WebGL Content" id="webgl-placeholder">-->
