--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Navigation Buttons -->
     <section id="navigation">
         <button onclick="window.location.href='pages/cv.html';">CV</button>
-        <button onclick="window.location.href='https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/';">LinkedIn</button>
+        <button onclick="window.location.href='https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/';" target="_blank"> LinkedIn</button>
         <button onclick="window.location.href='pages/projects.html';">Projekt</button>
         <button onclick="window.location.href='pages/personal.html';">Om mig</button>
         <button onclick="window.location.href='https://runebjork.github.io/';">Hem</button>
