--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <!-- Navigation Buttons -->
     <section id="navigation">
-        <button onclick="window.open('cv.html', '_blank');">CV</button>
+        <button onclick="window.open('pages/cv.html', '_blank');">CV</button>
         <button onclick="window.open('https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/', '_blank');">LinkedIn</button>
         <button onclick="window.location.href='pages/projects.html';">Projekt</button>
         <button onclick="window.location.href='pages/personal.html';">Om mig</button>
