introbox and css

--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section id="welcome">
-        <h1><b>Daniel Runebjörk</b> | Portfölj</h1>
-        <p><b>Titel: </b>Civilingenjör Arkitektur – Civil Engineer M.Sc. Architecture
-            <br><b>Introduktion: </b>Specialiserad inom bygghandlingsprojektering och utveckling av relaterad metodik.
-            <br>Erfarenhet av bostäder, kontor, skolor, vårdboenden, specialfastigheter.
-            <br>Kompletterande kunskap inom realtidsvisualisering och informationshantering relaterat till detta.
-            <br>Gästföreläsare vid Luleå Tekniska Universitet. Intresserad av matlagning, hantverk och friluftsliv.
-            <br><b>Styrkor: </b>Nyfiken, snabblärd, bred kompetens, innovativ, mån om kunskapsspridning, lagspelare, anpassningsbar, vänlig och omtänksam</p>
-    </section>
+  <section id="welcome">
+    <h1><b>Daniel Runebjörk</b> | Portfölj</h1>
+    <div class="introduction-box">
+        <p><b>Titel:</b> Civilingenjör Arkitektur – Civil Engineer M.Sc. Architecture</p>
+        <p><b>Introduktion:</b> Specialiserad inom bygghandlingsprojektering och utveckling av relaterad metodik. Erfarenhet av bostäder, kontor, skolor, vårdboenden, specialfastigheter. Kompletterande kunskap inom realtidsvisualisering och informationshantering relaterat till detta. Gästföreläsare vid Luleå Tekniska Universitet. Intresserad av matlagning, hantverk och friluftsliv.</p>
+        <p><b>Styrkor:</b> Nyfiken, snabblärd, bred kompetens, innovativ, mån om kunskapsspridning, lagspelare, anpassningsbar, vänlig och omtänksam</p>
+    </div>
+</section>
     <section id="welcome">
         <h1><b>Exempel på realtidsvisualisering</b> | Klimatmodell OASIS</h1>
         <p><b>Instruktioner: </b>Klicka på fönstret nedan</p>
