--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 <body>
   <section id="welcome">
     <h1><b>Daniel Runebjörk</b> | Portfölj</h1>
-    <div class="introduction-box">
-        <p><b>Titel:</b> Civilingenjör Arkitektur – Civil Engineer M.Sc. Architecture</p>
-        <p><b>Introduktion:</b> Specialiserad inom bygghandlingsprojektering och utveckling av relaterad metodik. Erfarenhet av bostäder, kontor, skolor, vårdboenden, specialfastigheter. Kompletterande kunskap inom realtidsvisualisering och informationshantering relaterat till detta. Gästföreläsare vid Luleå Tekniska Universitet. Intresserad av matlagning, hantverk och friluftsliv.</p>
-        <p><b>Styrkor:</b> Nyfiken, snabblärd, bred kompetens, innovativ, mån om kunskapsspridning, lagspelare, anpassningsbar, vänlig och omtänksam</p>
-    </div>
+    <div class="profile-container">
+      <img src="images/headshot.jpg" alt="Daniel Runebjörk" class="profile-picture">
+      <div class="profile-text">
+          <p><b>Introduktion:</b> Specialiserad inom bygghandlingsprojektering och utveckling av relaterad metodik.</p>
+          <p>Erfarenhet av bostäder, kontor, skolor, vårdboenden, specialfastigheter.</p>
+          <p>Kompletterande kunskap inom realtidsvisualisering och informationshantering relaterat till detta.</p>
+          <p>Gästföreläsare vid Luleå Tekniska Universitet. Intresserad av matlagning, hantverk och friluftsliv.</p>
+      </div>
+  </div>
 </section>
     <section id="welcome">
         <h1><b>Exempel på realtidsvisualisering</b> | Klimatmodell OASIS</h1>
