--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
     <h1><b>Daniel Runebjörk</b> | Portfölj</h1>
     <div class="introduction-box">
         <div class="profile-container">
-        <img src="images/headshot.jpg" alt="Daniel Runebjörk" class="profile-picture">
-        <div class="profile-text">
+            <img src="images/headshot.jpg" alt="Daniel Runebjörk" class="profile-picture">
+            <div class="profile-text">
           <p><b>Titel:</b> Civilingenjör Arkitektur – Civil Engineer M.Sc. Architecture</p>
           <p><b>Introduktion:</b> Specialiserad inom bygghandlingsprojektering och utveckling av relaterad metodik. Erfarenhet av bostäder, kontor, skolor, vårdboenden, specialfastigheter. Kompletterande kunskap inom realtidsvisualisering och informationshantering relaterat till detta. Gästföreläsare vid Luleå Tekniska Universitet. Intresserad av matlagning, hantverk och friluftsliv.</p>
           <p><b>Styrkor:</b> Nyfiken, snabblärd, bred kompetens, innovativ, mån om kunskapsspridning, lagspelare, anpassningsbar, vänlig och omtänksam</p>
         </div>
+      </div>
+  </div>
 </section>
-    <section id="welcome">
-        <h1><b>Exempel på realtidsvisualisering</b> | Klimatmodell OASIS</h1>
+<section id="realtime-visualization">
+  <h1><b>Exempel på realtidsvisualisering</b> | Klimatmodell OASIS</h1>
         <p><b>Instruktioner: </b>Klicka på fönstret nedan</p>
         <img src="images/placeholder.jpg" alt="WebGL Content Placeholder" id="webgl-placeholder" style="width: 960px; height: 600px; cursor: pointer;" onclick="loadWebGL();">
         <canvas id="unity-canvas" width="960" height="600" style="width: 960px; height: 600px; background: #231F20; display: none;"></canvas>
