--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,57 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daniel Runebjörk | Projekt</title>
-    <link rel="stylesheet" href="../css/style.css">
-</head>
-<body>
-    <section id="welcome">
-        <h1><b>Daniel Runebjörk</b> | Projekt</h1>
-    </section>
-    <section id="welcome">
-        <h1>Projekt 1</h1>
-        <p><b>Titel: </b>Projekt 1 | 
-            <br><b>Info: </b>Introduktion: Specialiserad inom bygghandlingsprojektering och utveckling 
-            <br>av relaterad metodik. Erfarenhet av bostäder, kontor, skolor, vårdboenden, 
-            <br>specialfastigheter. Kompletterande kunskap inom realtidsvisualisering och 
-            <br>informationshantering relaterat till detta. Gästföreläsare vid Luleå Tekniska 
-            <br>Universitet. Intresserad av matlagning, hantverk och friluftsliv.
-            <br><b>Styrkor: </b>Nyfiken, snabblärd, bred kompetens, innovativ, mån om 
-            <br>kunskapsspridning, lagspelare, anpassningsbar, vänlig och omtänksam</p>
-    </section>
-    <section id="welcome">
-        <h1>Projekt 2</h1>
-        <p><b>Titel: </b>Projekt 2
-            <br><b>Info: </b>Introduktion: Specialiserad inom bygghandlingsprojektering och utveckling 
-            <br>av relaterad metodik. Erfarenhet av bostäder, kontor, skolor, vårdboenden, 
-            <br>specialfastigheter. Kompletterande kunskap inom realtidsvisualisering och 
-            <br>informationshantering relaterat till detta. Gästföreläsare vid Luleå Tekniska 
-            <br>Universitet. Intresserad av matlagning, hantverk och friluftsliv.
-            <br><b>Styrkor: </b>Nyfiken, snabblärd, bred kompetens, innovativ, mån om 
-            <br>kunskapsspridning, lagspelare, anpassningsbar, vänlig och omtänksam</p>
-    </section>
-    <section id="welcome">
-        <h1>Projekt 3</h1>
-        <p><b>Titel: </b>Projekt 3
-            <br><b>Info: </b>Introduktion: Specialiserad inom bygghandlingsprojektering och utveckling 
-            <br>av relaterad metodik. Erfarenhet av bostäder, kontor, skolor, vårdboenden, 
-            <br>specialfastigheter. Kompletterande kunskap inom realtidsvisualisering och 
-            <br>informationshantering relaterat till detta. Gästföreläsare vid Luleå Tekniska 
-            <br>Universitet. Intresserad av matlagning, hantverk och friluftsliv.
-            <br><b>Styrkor: </b>Nyfiken, snabblärd, bred kompetens, innovativ, mån om 
-            <br>kunskapsspridning, lagspelare, anpassningsbar, vänlig och omtänksam</p>
-    </section>
-    <!-- Navigation Buttons -->
-    <section id="navigation">
-        <button onclick="window.open('cv.html', '_blank');">CV</button>
-        <button onclick="window.open('https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/', '_blank');">LinkedIn</button>
-        <button onclick="window.location.href='projects.html';">Projekt</button>
-        <button onclick="window.location.href='personal.html';">Om mig</button>
-        <button onclick="window.location.href='https://runebjork.github.io/';">Hem</button>
-    </section>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Daniel Runebjörk | Projekt</title>
+        <link rel="stylesheet" href="../css/style.css">
+    </head>
+    <body>
 
-    <!-- <script src="js/script.js"></script> -->
-</body>
+        <section id="welcome">
+            <h1><b>Daniel Runebjörk</b> | Projekt</h1>
+        </section>
+
+        <section id="project">
+            <div class="infobox">
+                <h1>Kvarnstugan, Sundbyberg</h1>
+                <p><b>År: </b> 2023 - nu <b> Roll: </b> Modellansvarig, medarbetare </p>
+                <p><b>Info: </b> Nybyggnation av stadskvarter, multifunktion. Systemhandling. </p>
+                <p><b>Tags: </b>Multifunktion, Bostäder</p>
+            </div>
+            <br>
+            <div class="infobox">
+                <h1>Gästföreläsare CAD-VR, Luleå Tekniska Universitet</h1>
+                <p><b>År: </b> 2023 <b> Roll: </b> Lärare, gästföreläsare </p>
+                <p><b>Info: </b> Föreläsning och pedagogiskt arbete </p>
+                <p><b>Tags: </b>Utbildning</p>
+            </div>
+            <br>
+            <div class="infobox">
+                <h1>Inre Hamnen G2, Inre Hamnen L2</h1>
+                <p><b>År: </b> 2022-2023 <b> Roll: </b> Modellansvarig, medarbetare </p>
+                <p><b>Info: </b> Nybyggnation av flerbostadshus. System- och bygghandling </p>
+                <p><b>Tags: </b>Bostäder</p>
+            </div>
+            <br>
+            <div class="infobox">
+                <h1>Hus 67 och 68, Nacka Strand</h1>
+                <p><b>År: </b> 2022 <b> Roll: </b> Modellansvarig, medarbetare </p>
+                <p><b>Info: </b> Påbyggnad av befintlig byggnad med skola och kontorslokaler. Bygghandling. </p>
+                <p><b>Tags: </b>Skola, Kontor</p>
+            </div>
+            <br>
+            <div class="infobox">
+                <h1>Regionens Hus, Härnösand</h1>
+                <p><b>År: </b> 2021 <b> Roll: </b> Handläggare </p>
+                <p><b>Info: </b> Projektering av bygghandlingar för ombyggnad av kontorslokaler </p>
+                <p><b>Tags: </b>Kontor, Offentligt</p>
+            </div>
+            <br>
+            <div class="infobox">
+                <h1>Vård- och omsorgsboende, Saltvik</h1>
+                <p><b>År: </b> 2021 <b> Roll: </b> Handläggare </p>
+                <p><b>Info: </b> Konceptskisser till upprättande av förfrågningsunderlag för vård- och omsorgsboende.</p>
+                <p><b>Tags: </b>Vård, Säkerhet, Specialfastigheter</p>
+            </div>
+            <br>
+            <div class="infobox">
+                <h1>Riksarkivet MKC, Fränsta</h1>
+                <p><b>År: </b> 2021 <b> Roll: </b> Handläggare </p>
+                <p><b>Info: </b>Projektering av bygghandlingar för ombyggnad av Riksarkivets mediakonverteringscenter.</p>
+                <p><b>Tags: </b>Arkiv, Säkerhet, Specialfastigheter</p>
+            </div>
+        </section>
+
+        <section id="navigation">
+            <button onclick="window.open('cv.html', '_blank');">CV</button>
+            <button onclick="window.open('https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/', '_blank');">LinkedIn</button>
+            <button onclick="window.location.href='projects.html';">Projekt</button>
+            <!-- <button onclick="window.location.href='personal.html';">Om mig</button> -->
+            <button onclick="window.location.href='https://runebjork.github.io/';">Hem</button>
+        </section>
+    </body>
 </html>
+
+
+Riksarkivet MKC, Fränsta (2021)
