--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   }
 </script>
 
-        <!-- <script src="Build/OASIS_WebGL.loader.js"></script>
+        <script src="Build/OASIS_WebGL.loader.js"></script>
 
         <script>
           if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
@@ -94,7 +94,7 @@
             // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
             // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
           });
-        </script> -->
+        </script>
 
 </section>
     <!-- Navigation Buttons -->
