--- a/pages/projects.html
+++ b/pages/projects.html
@@ -67,7 +67,7 @@
             <button onclick="window.open('cv.html', '_blank');">CV</button>
             <button onclick="window.open('https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/', '_blank');">LinkedIn</button>
             <button onclick="window.location.href='projects.html';">Projekt</button>
-            <button onclick="window.location.href='index.html';">Hem</button>
+            <button onclick="window.location.href='../index.html';">Hem</button>
         </section>
     </body>
 </html>
