--- a/pages/cv.html
+++ b/pages/cv.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,15 +9,20 @@
     <style>
         #cv-frame {
             width: 100%;
-            height: 100vh; /* Adjust height as necessary */
+            height: 100vh;
+            /* Adjust height as necessary */
             border: none;
         }
     </style>
 </head>
+
 <body>
     <div id="cv-container">
-        <iframe src="../documents/CV_daniel_runebjork_2023_simple.pdf" id="cv-frame" style="width:100%; height:100vh;" frameborder="0"></iframe>
-        <p>If the CV does not display correctly, you can <a href="../documents/CV_daniel_runebjork_2023_simple.pdf" download="DanielRunebjörk_2023_CV.pdf">download the CV here</a>.</p>
+        <iframe src="../documents/CV_daniel_runebjork_2023_simple.pdf" id="cv-frame" style="width:100%; height:100vh;"
+            frameborder="0"></iframe>
+        <p>If the CV does not display correctly, you can <a href="../documents/CV_daniel_runebjork_2023_simple.pdf"
+                download="DanielRunebjörk_2023_CV.pdf">download the CV here</a>.</p>
     </div>
 </body>
+
 </html>
