--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <section id="welcome">
     <h1><b>Exempel på realtidsvisualisering</b> | Klimatmodell</h1>
-    <p><b>Instruktioner: </b>Klicka på fönstret nedan.\nAnvänd höger musknapp för att rotera modellen.\nAnvänd vänster
+    <p><b>Instruktioner: </b>Klicka på fönstret nedan.<br>Använd höger musknapp för att rotera modellen.<br>Använd vänster
       musknapp för att interagera med menyknappar.</p>
     <div id="desktop-placeholder" onclick="loadWebGL();" style="cursor: pointer;">
       <div class="placeholder-text"><b>Klicka här</b><br>ca 36 MB</div>
