naming conventions and css

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
 
-  <section id="welcome">
-    <h1><b>Daniel Runebjörk</b> | Portfölj</h1>
-    <br>
+  <header class="main-header"> <b>Daniel Runebjörk</b> | Portfölj </header>
+
+  <section id="profile-section">
     <div class="infobox">
       <div class="profile-container">
         <img src="images/headshot.jpg" alt="Daniel Runebjörk" class="profile-picture">
@@ -29,7 +29,7 @@
     </div>
   </section>
 
-  <section id="welcome">
+  <section id="visualization-section">
     <h1><b>Exempel på realtidsvisualisering</b> | Klimatmodell</h1>
     <p><b>Instruktioner: </b>Klicka på fönstret nedan.<br>Använd höger musknapp för att rotera modellen.<br>Använd vänster
       musknapp för att interagera med menyknappar.</p>
