--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,54 +10,52 @@
 
 <body>
 
-    <section id="welcome">
-        <h1><b>Daniel Runebjörk</b> | Projekt</h1>
-    </section>
+    <header class="main-header"> <b>Daniel Runebjörk</b> | Projekt</header>
 
-    <section id="project">
-        <div class="infobox">
+    <section id="project-section">
+        <div class="project-info-box">
             <h1>Kvarnstugan, Sundbyberg</h1>
             <p><b>År: </b> 2023 - nu <b> Roll: </b> Modellansvarig, medarbetare </p>
             <p><b>Info: </b> Nybyggnation av stadskvarter, multifunktion. Systemhandling. </p>
             <p><b>Tags: </b>Multifunktion, Bostäder</p>
         </div>
         <br>
-        <div class="infobox">
+        <div class="project-info-box">
             <h1>Gästföreläsare CAD-VR, Luleå Tekniska Universitet</h1>
             <p><b>År: </b> 2023 <b> Roll: </b> Lärare, gästföreläsare </p>
             <p><b>Info: </b> Föreläsning och pedagogiskt arbete </p>
             <p><b>Tags: </b>Utbildning</p>
         </div>
         <br>
-        <div class="infobox">
+        <div class="project-info-box">
             <h1>Inre Hamnen G2, Inre Hamnen L2</h1>
             <p><b>År: </b> 2022-2023 <b> Roll: </b> Modellansvarig, medarbetare </p>
             <p><b>Info: </b> Nybyggnation av flerbostadshus. System- och bygghandling </p>
             <p><b>Tags: </b>Bostäder</p>
         </div>
         <br>
-        <div class="infobox">
+        <div class="project-info-box">
             <h1>Hus 67 och 68, Nacka Strand</h1>
             <p><b>År: </b> 2022 <b> Roll: </b> Modellansvarig, medarbetare </p>
             <p><b>Info: </b> Påbyggnad av befintlig byggnad med skola och kontorslokaler. Bygghandling. </p>
             <p><b>Tags: </b>Skola, Kontor</p>
         </div>
         <br>
-        <div class="infobox">
+        <div class="project-info-box">
             <h1>Regionens Hus, Härnösand</h1>
             <p><b>År: </b> 2021 <b> Roll: </b> Handläggare </p>
             <p><b>Info: </b> Projektering av bygghandlingar för ombyggnad av kontorslokaler </p>
             <p><b>Tags: </b>Kontor, Offentligt</p>
         </div>
         <br>
-        <div class="infobox">
+        <div class="project-info-box">
             <h1>Vård- och omsorgsboende, Saltvik</h1>
             <p><b>År: </b> 2021 <b> Roll: </b> Handläggare </p>
             <p><b>Info: </b> Konceptskisser till upprättande av förfrågningsunderlag för vård- och omsorgsboende.</p>
             <p><b>Tags: </b>Vård, Säkerhet, Specialfastigheter</p>
         </div>
         <br>
-        <div class="infobox">
+        <div class="project-info-box">
             <h1>Riksarkivet MKC, Fränsta</h1>
             <p><b>År: </b> 2021 <b> Roll: </b> Handläggare </p>
             <p><b>Info: </b>Projektering av bygghandlingar för ombyggnad av Riksarkivets mediakonverteringscenter.</p>
