--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <header class="main-header"> <b>Daniel Runebjörk</b> | Projekt</header>
+    <header class="main-header"> <h1><b>Daniel Runebjörk</b> | Projekt </h1></header>
 
     <section id="project-section">
         <div class="project-info-box">
