--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-  <header class="main-header"> <b>Daniel Runebjörk</b> | Portfölj </header>
+  <header class="main-header"> <h1><b>Daniel Runebjörk</b> | Portfölj </h1></header>
 
   <section id="profile-section">
     <div class="infobox">
