--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <header class="main-header"> <h1><b>Daniel Runebjörk</b> | Projekt </h1></header>
+    <header class="main-header"> <h1><a style="text-decoration:none" href="https://runebjork.se/"><b>Daniel Runebjörk</b></a> | Projekt </h1></header>
 
     <section id="project-section">
         <div class="project-info-box">
