--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <button
         onclick="window.open('https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/', '_blank');">LinkedIn</button>
       <button onclick="window.location.href='pages/projects.html';">Projekt</button>
-      <button onclick="window.location.href='index.html';">Hem</button>
+      <button onclick="window.location.href='https://runebjork.se/';">Hem</button>
     </div>
   </section>
 </body>
