implemented the linked project pages

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -13,54 +13,68 @@
     <header class="main-header"> <h1><a style="text-decoration:none" href="https://runebjork.se/"><b>Daniel Runebjörk</b></a> | Projekt </h1></header>
 
     <section id="project-section">
+        <a href="project_template.html?project=project1">    
         <div class="project-info-box">
             <h1>Kvarnstugan, Sundbyberg</h1>
             <p><b>År: </b> 2023 - nu <b> Roll: </b> Modellansvarig, medarbetare </p>
             <p><b>Info: </b> Nybyggnation av stadskvarter, multifunktion. Systemhandling. </p>
             <p><b>Tags: </b>Multifunktion, Bostäder</p>
         </div>
+        </a>
         <br>
+        <a href="project_template.html?project=project2">
         <div class="project-info-box">
             <h1>Gästföreläsare CAD-VR, Luleå Tekniska Universitet</h1>
             <p><b>År: </b> 2023 <b> Roll: </b> Lärare, gästföreläsare </p>
             <p><b>Info: </b> Föreläsning och pedagogiskt arbete </p>
             <p><b>Tags: </b>Utbildning</p>
         </div>
+        </a>
         <br>
+        <a href="project_template.html?project=project3">
         <div class="project-info-box">
             <h1>Inre Hamnen G2, Inre Hamnen L2</h1>
             <p><b>År: </b> 2022-2023 <b> Roll: </b> Modellansvarig, medarbetare </p>
             <p><b>Info: </b> Nybyggnation av flerbostadshus. System- och bygghandling </p>
             <p><b>Tags: </b>Bostäder</p>
         </div>
+        </a>
         <br>
+        <a href="project_template.html?project=project4">
         <div class="project-info-box">
             <h1>Hus 67 och 68, Nacka Strand</h1>
             <p><b>År: </b> 2022 <b> Roll: </b> Modellansvarig, medarbetare </p>
             <p><b>Info: </b> Påbyggnad av befintlig byggnad med skola och kontorslokaler. Bygghandling. </p>
             <p><b>Tags: </b>Skola, Kontor</p>
         </div>
+        </a>
         <br>
+        <a href="project_template.html?project=project5">
         <div class="project-info-box">
             <h1>Regionens Hus, Härnösand</h1>
             <p><b>År: </b> 2021 <b> Roll: </b> Handläggare </p>
             <p><b>Info: </b> Projektering av bygghandlingar för ombyggnad av kontorslokaler </p>
             <p><b>Tags: </b>Kontor, Offentligt</p>
         </div>
+        </a>
         <br>
+        <a href="project_template.html?project=project6">
         <div class="project-info-box">
             <h1>Vård- och omsorgsboende, Saltvik</h1>
             <p><b>År: </b> 2021 <b> Roll: </b> Handläggare </p>
             <p><b>Info: </b> Konceptskisser till upprättande av förfrågningsunderlag för vård- och omsorgsboende.</p>
             <p><b>Tags: </b>Vård, Säkerhet, Specialfastigheter</p>
         </div>
+        </a>
         <br>
+        <a href="project_template.html?project=project7">
         <div class="project-info-box">
             <h1>Riksarkivet MKC, Fränsta</h1>
             <p><b>År: </b> 2021 <b> Roll: </b> Handläggare </p>
             <p><b>Info: </b>Projektering av bygghandlingar för ombyggnad av Riksarkivets mediakonverteringscenter.</p>
             <p><b>Tags: </b>Arkiv, Säkerhet, Specialfastigheter</p>
         </div>
+        </a>
     </section>
 
     <!-- Navigation Buttons -->
