moved to pages and fixed look of link

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -13,7 +13,7 @@
     <header class="main-header"> <h1><a style="text-decoration:none" href="https://runebjork.se/"><b>Daniel Runebjörk</b></a> | Projekt </h1></header>
 
     <section id="project-section">
-        <a href="project_template.html?project=project1">    
+        <a style="text-decoration:none" href="project_template.html?project=project1">    
         <div class="project-info-box">
             <h1>Kvarnstugan, Sundbyberg</h1>
             <p><b>År: </b> 2023 - nu <b> Roll: </b> Modellansvarig, medarbetare </p>
@@ -22,7 +22,7 @@
         </div>
         </a>
         <br>
-        <a href="project_template.html?project=project2">
+        <a style="text-decoration:none" href="project_template.html?project=project2">
         <div class="project-info-box">
             <h1>Gästföreläsare CAD-VR, Luleå Tekniska Universitet</h1>
             <p><b>År: </b> 2023 <b> Roll: </b> Lärare, gästföreläsare </p>
@@ -31,7 +31,7 @@
         </div>
         </a>
         <br>
-        <a href="project_template.html?project=project3">
+        <a style="text-decoration:none" href="project_template.html?project=project3">
         <div class="project-info-box">
             <h1>Inre Hamnen G2, Inre Hamnen L2</h1>
             <p><b>År: </b> 2022-2023 <b> Roll: </b> Modellansvarig, medarbetare </p>
@@ -40,7 +40,7 @@
         </div>
         </a>
         <br>
-        <a href="project_template.html?project=project4">
+        <a style="text-decoration:none" href="project_template.html?project=project4">
         <div class="project-info-box">
             <h1>Hus 67 och 68, Nacka Strand</h1>
             <p><b>År: </b> 2022 <b> Roll: </b> Modellansvarig, medarbetare </p>
@@ -49,7 +49,7 @@
         </div>
         </a>
         <br>
-        <a href="project_template.html?project=project5">
+        <a style="text-decoration:none" href="project_template.html?project=project5">
         <div class="project-info-box">
             <h1>Regionens Hus, Härnösand</h1>
             <p><b>År: </b> 2021 <b> Roll: </b> Handläggare </p>
@@ -58,7 +58,7 @@
         </div>
         </a>
         <br>
-        <a href="project_template.html?project=project6">
+        <a style="text-decoration:none" href="project_template.html?project=project6">
         <div class="project-info-box">
             <h1>Vård- och omsorgsboende, Saltvik</h1>
             <p><b>År: </b> 2021 <b> Roll: </b> Handläggare </p>
@@ -67,7 +67,7 @@
         </div>
         </a>
         <br>
-        <a href="project_template.html?project=project7">
+        <a style="text-decoration:none" href="project_template.html?project=project7">
         <div class="project-info-box">
             <h1>Riksarkivet MKC, Fränsta</h1>
             <p><b>År: </b> 2021 <b> Roll: </b> Handläggare </p>
