--- a/pages/project_template.html
+++ b/pages/project_template.html
@@ -6,6 +6,9 @@
     <title>Project Title - Daniel Runebjörk | Projekt</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
+
+<header class="main-header"> <h1 id="project-title">Project Title</h1></header>
+
 <body>
     <section class="project-details">
         <h1 id="project-title">Project Title</h1>
