--- a/pages/project_template.html
+++ b/pages/project_template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Title - Daniel Runebjörk | Projekt</title>
+    <title>Daniel Runebjörk | Projekt</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -11,7 +11,6 @@
 
 <body>
     <section class="project-details">
-        <h1 id="project-title">Project Title</h1>
         <p><b>År:</b> <span id="project-year"></span></p>
         <p><b>Roll:</b> <span id="project-role"></span></p>
         <p><b>Info:</b> <span id="project-info"></span></p>
