--- a/pages/project_template.html
+++ b/pages/project_template.html
@@ -19,7 +19,7 @@
 
     <section id="navigation-container">
         <div id="navigation">
-          <button onclick="window.open('pages/cv.html', '_blank');">CV</button>
+          <button onclick="window.open('cv.html', '_blank');">CV</button>
           <button onclick="window.open('https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/', '_blank');">LinkedIn</button>
           <button onclick="window.location.href='projects.html';">Projekt</button>
           <button onclick="window.location.href='https://runebjork.se/';">Hem</button>
