--- a/pages/project_template.html
+++ b/pages/project_template.html
@@ -9,7 +9,7 @@
 <body>
 
   <header class="main-header"> <h1 id="project-title">Project Title</h1></header>
-  
+
     <section class="project-details">
         <p><b>År:</b> <span id="project-year"></span></p>
         <p><b>Roll:</b> <span id="project-role"></span></p>
@@ -22,7 +22,7 @@
           <button onclick="window.open('cv.html', '_blank');">CV</button>
           <button onclick="window.open('https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/', '_blank');">LinkedIn</button>
           <button onclick="window.location.href='projects.html';">Projekt</button>
-          <button onclick="window.location.href='https://runebjork.se/';">Hem</button>
+          <button onclick="window.location.href='../index.html';">Hem</button>
         </div>
     </section>
 
