changed nav buttons, implemented header images on project

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="placeholder-text"><b>Klicka här</b><br>ca 36 MB</div>
     </div>
     <div id="mobile-placeholder">
-      <div class="placeholder-text"><b>Öppna i desktop-<br>webbläsare för att<br>se innehåll</div>
+      <div class="placeholder-text">Öppna i desktop-<br>webbläsare för att<br>se innehåll</div>
     </div>
     <canvas id="unity-canvas" width="960" height="600" style="display: none;"></canvas>
     <script src="js/webglloader.js"></script>
@@ -47,10 +47,10 @@
 
   <section id="navigation-container">
     <div id="navigation">
-      <button onclick="window.open('pages/cv.html', '_blank');">CV</button>
-      <button onclick="window.open('https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/', '_blank');">LinkedIn</button>
-      <button onclick="window.location.href='pages/projects.html';">Projekt</button>
-      <button onclick="window.location.href='index.html';">Hem</button>
+      <a href="pages/cv.html" target="_blank">CV</a>
+      <a href="https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/", target="_blank">LinkedIn</a>
+      <a href="pages/projects.html">Projekt</a>
+      <a href="index.html">Hem</a>
     </div>
   </section>
 </body>
