--- a/pages/projects.html
+++ b/pages/projects.html
@@ -78,12 +78,14 @@
     </section>
 
     <!-- Navigation Buttons -->
+    
     <section id="navigation-container">
         <div id="navigation">
-            <button onclick="window.open('cv.html', '_blank');">CV</button>
-            <button onclick="window.open('https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/', '_blank');">LinkedIn</button>
-            <button onclick="window.location.href='projects.html';">Projekt</button>
-            <button onclick="window.location.href='../index.html';">Hem</button>
+        <a href="cv.html" target="_blank">CV</a>
+        <a href="https://www.linkedin.com/in/daniel-runebj%C3%B6rk-38ab56157/", target="_blank">LinkedIn</a>
+        <a href="projects.html">Projekt</a>
+        <a href="../index.html">Hem</a>
+        </div>
     </section>
 </body>
 
